--- a/apis/api-reference.mdx
+++ b/apis/api-reference.mdx
@@ -3,12 +3,14 @@ title: API Overview
 description: Explore all available API endpoints, categorized by their functionality.
 ---
 
+import AuthSnippet from '/snippets/authentication/authentication.mdx';
+import SupportSnippet from '/snippets/support/support-contact.mdx';
+
 Welcome to the comprehensive API Reference for our platform. Here you will find detailed documentation for all available endpoints, allowing you to seamlessly integrate our services into your applications.
 
 All API calls are made to the base URL: ``https://theslow.net/api``.
 
-## Authentication
-Remember that all API requests require authentication using your ``X-API-KEY``. For detailed information on how to obtain and use your API key, please refer to our [Authentication](authentication) Guide.
+<AuthSnippet/>
 
 ## API Categories
 Our APIs are organized into logical categories to help you quickly find the endpoints you need:
@@ -28,5 +30,4 @@ Configure various settings for your site.
 (Documentation coming soon for this category)
 Integrate with Discord webhooks for automated notifications and events.
 
-## Need Further Assistance?
-If you have any questions or encounter issues, please don't hesitate to reach out to our [support team](https://theslow.net/dashboard#support).
+<SupportSnippet/>
