--- a/authentication.mdx
+++ b/authentication.mdx
@@ -3,6 +3,8 @@ title: Authentication
 description: All requests to our API require authentication using a unique API key. This ensures that only authorized applications can access your data and perform actions on your behalf.
 ---
 
+import SupportSnippet from '/snippets/support/support-contact.mdx';
+
 ## How to Get Your API Key
 Your API key is generated and managed within your dashboard.
 
@@ -104,5 +106,4 @@ async function fetchData() {
 
 - **Monitor Usage:** Keep an eye on your API usage patterns. Unusual spikes or activity might indicate a compromised key.
 
-## Need Further Assistance?
-If you have any questions about error handling or encounter unexpected errors, please don't hesitate to reach out to our [support team](https://theslow.net/dashboard#support).
+<SupportSnippet/>
