--- a/error-handling.mdx
+++ b/error-handling.mdx
@@ -3,6 +3,9 @@ title: Error Handling
 description: When interacting with any API, it's crucial to understand how to interpret and handle errors. Our API uses standard HTTP status codes to indicate the success or failure of a request, along with a consistent JSON error response format to provide more specific details.
 ---
 
+import AuthSnippet from '/snippets/authentication/authentication.mdx';
+import SupportSnippet from '/snippets/support/support-contact.mdx';
+
 ## HTTP Status Codes
 Here are the common HTTP status codes you might encounter:
 
@@ -112,5 +115,6 @@ async function makeErrorProneCall() {
 // makeErrorProneCall();
 ```
 
-## Need Further Assistance?
-If you have any questions about error handling or encounter unexpected errors, please don't hesitate to reach out to our [support team](https://theslow.net/dashboard#support).
+<AuthSnippet/>
+
+<SupportSnippet/>
