--- a/guides/automation/integrating-with-zapier-or-n8n.mdx
+++ b/guides/automation/integrating-with-zapier-or-n8n.mdx
@@ -3,6 +3,9 @@ title: Integrating with Zapier or n8n
 description: Use Zapier or n8n to automate your SlowNet updates with no code.
 ---
 
+import AuthSnippet from '/snippets/authentication/authentication.mdx';
+import SupportSnippet from '/snippets/support/support-contact.mdx';
+
 ## Overview
 
 Want to update your SlowNet page whenever something happens — like a new RSS post, or a new calendar event?  
@@ -44,10 +47,10 @@ You can use tools like **Zapier** or **n8n** to make HTTP requests to your SlowN
 }
 ```
 
-## Authentication
-
-See the [Authentication Guide](../../authentication).
+<AuthSnippet/>
 
 ## Related
 
 - [Building your SlowNet page](../building-your-slownet-page)
+
+<SupportSnippet/>
