--- a/index.mdx
+++ b/index.mdx
@@ -1,37 +1,30 @@
 # Welcome to Our Documentation!
 We're thrilled to have you here. This documentation is designed to help you quickly get started with our platform and make the most of its powerful features. Whether you're integrating our APIs, exploring core concepts, or looking for detailed guides, you'll find everything you need right here.
 
-🚀 Get Started Quickly
+## 🚀 Get Started Quickly
 New to our platform? The best place to begin is with our quickstart guide. It will walk you through the essential steps to set up your environment and make your first API call.
+- **➡️ Go to [Quickstart](quickstart)**
 
-## ➡️ Go to [Quickstart](quickstart)
 
 ## 📚 Explore Key Sections
 Our documentation is organized into key areas to help you find information efficiently:
 
-- API Reference: Dive deep into our powerful APIs. You'll find detailed endpoints, request/response examples, and authentication methods for all 6 of our core APIs.
+- **API Reference**: Dive deep into our powerful APIs. You'll find detailed endpoints, request/response examples, and authentication methods for all 6 of our core APIs.  
 [Explore APIs →](apis)
 
-- Core Concepts: Understand the fundamental principles and architecture behind our platform.
-[Learn Core Concepts →](concepts)
-
-- Guides & Tutorials: Follow step-by-step tutorials and practical guides to implement common use cases and solve specific problems.
+- **Guides & Tutorials**: Follow step-by-step tutorials and practical guides to implement common use cases and solve specific problems.  
 [Browse Guides →](guides)
 
 ## ✨ What You Can Do
 With our platform, you can:
 
-- Integrate seamlessly: Connect your applications using our well-documented APIs.
+- **Integrate seamlessly**: Connect your applications using our well-documented APIs.
 
-- Automate workflows: Leverage our endpoints to streamline your processes.
+- **Automate workflows**: Leverage our endpoints to streamline your processes.
 
-- Build powerful solutions: Create custom applications tailored to your needs.
+- **Build powerful solutions**: Create custom applications tailored to your needs.
 
 ## ❓ Need Help?
-If you have any questions, encounter issues, or just want to connect with our community, here are some resources:
+If you have any questions, encounter issues, or just want to connect with our community, you can access our support resources through your [dashboard](https://theslow.net/dashboard).
 
-- Email: [Email our support team]()
-
-- Discord: [Visit our Discord community]()
-
-We hope you find this documentation helpful!
+**We hope you find this documentation helpful!**
