--- a/guides/automation/automating-with-github-actions.mdx
+++ b/guides/automation/automating-with-github-actions.mdx
@@ -3,6 +3,9 @@ title: Automating with GitHub Actions
 description: Use GitHub Actions to automatically update your SlowNet page.
 ---
 
+import AuthSnippet from '/snippets/authentication/authentication.mdx';
+import SupportSnippet from '/snippets/support/support-contact.mdx';
+
 ## Overview
 
 Want to update your SlowNet mood, bio, or blocks on a schedule?  
@@ -35,10 +38,10 @@ jobs:
 - Add your API key in your GitHub repo settings under **Secrets and variables** as `SLOWNET_API_KEY`.
 - Never commit your API key directly to your code.
 
-## Authentication
-
-See the [Authentication Guide](../../authentication).
+<AuthSnippet/>
 
 ## Related
 
 - [Building your SlowNet page](../building-your-slownet-page)
+
+<SupportSnippet/>
